# chimera

./: Cargo.toml  config.toml  conversation.md  readme.md
.github/workflows/: main.yml
chimera-alchemist/: Cargo.toml
chimera-alchemist/src/: lib.rs
chimera-bus/: Cargo.toml
chimera-bus/src/: lib.rs
chimera-cell/: Cargo(1).toml  Cargo.toml  readme.md
chimera-cell/src/: lib.rs  sandbox.rs
chimera-core/: Cargo.toml  build.rs
chimera-core/src/: alchemist.rs  lib.rs  primitives.rs  simd.rs  transforms.rs
chimera-crypto/: Cargo.toml
chimera-crypto/src/: Cargo.toml  lib.rs  readme.md  sha256.rs
chimera-dashboard/: app.py
chimera-fabric/: Cargo.toml
chimera-fabric/src/: lib.rs  memory.rs  topology.rs
chimera-intelligence/: Cargo.toml
chimera-intelligence/src/: lib.rs  multi_objective.rs  rl_agents.rs  swarm.rs  topology.rs
chimera-jax/: Cargo.toml
chimera-jax/src/: lib.rs
chimera-scheduler/: Cargo.toml
chimera-scheduler/src/: lib.rs
chimera-state/: Cargo.toml
chimera-state/src/: lib.rs
chimera-subsystems/: Cargo.toml
chimera-subsystems/src/: echovoid.rs  grover.rs  lib.rs  lir.rs  sonar.rs  sst.rs  vpi.rs
examples/: simple-miners.rs
