[package]
name = "chimera-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasmtime = "14.0"
vergen = { version = "8.2", features = ["build", "cargo", "git", "rustc"] }