
[workspace]
resolver = "2"
members = [
    "chimera-core",
    "chimera-fabric",
    "chimera-crypto",
    "chimera-cell",
    "chimera-intelligence",
    "chimera-jax",
    "chimera-subsystems",
]

[workspace.package]
version = "0.1.0-beta"
edition = "2021"
authors = ["José Roberto Jiménez Cordero <tijuanapaint@gmail.com>"]
license = "MIT"
repository = "https://github.com/deskiziarecords/chimera"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
wasmtime = "14.0"
# ... share dependencies to prevent version drift
