[workspace]
resolver = "2"
members = [
    "chimera-core",
    "chimera-fabric",
    "chimera-crypto",
    "chimera-cell",
    "chimera-intelligence",
    "chimera-jax",
    "chimera-subsystems",
    "chimera-scheduler",
    "chimera-bus",
    "chimera-state",
]

[workspace.package]
version = "0.1.0-beta.1"
edition = "2021"
authors = ["José Roberto Jiménez Cordero <tijuanapaint@gmail.com>"]
license = "MIT"
repository = "https://github.com/synth-fuse/chimera-os"
documentation = "https://docs.chimera-os.dev"
keywords = ["mining", "distributed", "wasm", "ai", "orchestration"]
categories = ["cryptography", "distributed-systems"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WASM Runtime
wasmtime = "14.0"

# Cryptography
sha2 = "0.10"
digest = "0.10"
hex = "0.4"
rand = "0.8"

# Numerical Computing
ndarray = "0.15"
num-bigint = "0.4"
num-complex = "0.4"

# Build Metadata
vergen = { version = "8.2", features = ["build", "cargo", "git", "rustc"] }

# Utilities
chrono = "0.4"
fxhash = "0.2"
anyhow = "1.0"

# Dev Dependencies
criterion = "0.5"
tokio-test = "0.4"