[package]
name = "chimera-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pub/Sub event bus for distributed communication"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }

[dev-dependencies]
tokio-test = { workspace = true }