[dependencies]
# Internal (for future integration)
# chimera-fabric = { path = "../chimera-fabric", optional = true }
# chimera-cell = { path = "../chimera-cell", optional = true }

# External
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
vergen = { version = "8.2", features = ["build", "cargo", "git", "rustc"] }