[package]
name = "chimera-core"
version = "0.1.0"
edition = "2021"
description = "Core primitives, transforms, and orchestration engine for ChimeraOS"
license = "MIT"
repository = "https://github.com/deskiziarecords/chimera"
authors = ["ChimeraOS"]
readme = "README.md"

[lib]
name = "chimera_core"
path = "src/lib.rs"

# -------------------------
# Dependencies
# -------------------------

[dependencies]

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Random numbers (HashTransform initialization)
rand = "0.8"

# Logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Optional build metadata support
vergen = { version = "8", optional = true }

# -------------------------
# Dev dependencies
# -------------------------

[dev-dependencies]

serde_json = "1.0"


# -------------------------
# Feature Flags
# -------------------------

[features]

default = []

# Enable extra build metadata
build-info = ["vergen"]
