[package]
name = "chimera-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic hash implementations"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }

# Optional: Assembly optimizations for x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
sha2-asm = { version = "0.6", optional = true }

[features]
default = []
asm = ["sha2-asm"]

[dev-dependencies]
criterion = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "sha256_benchmark"
harness = false