[package]
name = "chimera-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cryptographic primitives and hashing engines for ChimeraOS"
repository = "https://github.com/deskiziarecords/chimera"
authors = ["Chimera Project"]

[lib]
name = "chimera_crypto"
path = "src/lib.rs"

[dependencies]

# Internal workspace crates
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }

# Cryptography
sha2 = "0.10"

# Async runtime utilities
tokio = { version = "1.36", features = ["sync", "rt"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]

tokio = { version = "1.36", features = ["rt", "macros"] }

[features]

default = ["cpu"]

# CPU hashing (default)
cpu = []

# GPU acceleration (future CUDA/OpenCL kernels)
gpu = []

# FPGA acceleration (SST / hardware pipelines)
fpga = []

# Experimental SIMD SHA acceleration
simd = []
