[package]
name = "chimera-fabric"
version = "0.1.0"
edition = "2021"
authors = ["José Roberto Jiménez Cordero <tijuanapaint@gmail.com>"]
license = "MIT"
description = "Hardware and memory abstraction layer for ChimeraOS"

[dependencies]
# Internal Workspace Dependencies
chimera-core = { path = "../chimera-core" }

# External Dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1" # Recommended for system telemetry
num_cpus = "1.0" # Basic hardware detection helper

[dev-dependencies]
tokio-test = "0.4"