[package]
name = "chimera-intelligence"
version = "0.1.0"
edition = "2021"
authors = ["José Roberto Jiménez Cordero <tijuanapaint@gmail.com>"]
license = "MIT"
description = "AI/ML optimization and inference layer for ChimeraOS"

[dependencies]
# Internal Workspace Dependencies
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }
chimera-crypto = { path = "../chimera-crypto" }
chimera-jax = { path = "../chimera-jax" }

# External Dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
ndarray = "0.15"              # Numerical computing for ML
rand = "0.8"                  # Random number generation for optimization
candle-core = { version = "0.3", optional = true }  # ML inference (optional)
candle-nn = { version = "0.3", optional = true }

[features]
default = []
ml-inference = ["candle-core", "candle-nn"]  # Enable ML model inference

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "optimization_benchmark"
harness = false