[package]
name = "chimera-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI/ML optimization and inference layer"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }
chimera-crypto = { path = "../chimera-crypto" }
chimera-jax = { path = "../chimera-jax" }

# Optional: ML inference
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

[features]
default = []
ml-inference = ["candle-core", "candle-nn"]

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "optimization_benchmark"
harness = false