[package]
name = "chimera-jax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Differentiable hash approximation layer"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }

# Optional: Automatic differentiation
autodiff = { version = "0.6", optional = true }

[features]
default = []
autodiff = ["autodiff"]

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "gradient_benchmark"
harness = false