[package]
name = "chimera-scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Task scheduler for distributed orchestration"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }
chimera-bus = { path = "../chimera-bus" }

[dev-dependencies]
tokio-test = { workspace = true }