[package]
name = "chimera-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent state and checkpointing"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }

# Storage Backend
sled = "0.34"

[dev-dependencies]
tokio-test = { workspace = true }