[package]
name = "chimera-subsystems"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Specialized domain subsystems (Phase 3)"

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num-bigint = { workspace = true }
num-complex = { workspace = true }

# Internal
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }
chimera-crypto = { path = "../chimera-crypto" }
chimera-cell = { path = "../chimera-cell" }
chimera-intelligence = { path = "../chimera-intelligence" }

[features]
default = ["grover", "echovoid"]
grover = []
echovoid = []
vpi = []
sst = []
sonar = []

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "subsystem_benchmark"
harness = false