[package]
name = "chimera-crypto"
version = "0.1.0"
edition = "2021"
authors = ["José Roberto Jiménez Cordero <tijuanapaint@gmail.com>"]
license = "MIT"
description = "Cryptographic hash implementations for ChimeraOS"

[dependencies]
# Internal Workspace Dependencies
chimera-core = { path = "../chimera-core" }
chimera-fabric = { path = "../chimera-fabric" }

# External Dependencies
sha2 = "0.10"             # Reference implementation for correctness
digest = "0.10"           # Trait abstractions
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Optional hardware acceleration features
[target.'cfg(target_arch = "x86_64")'.dependencies]
sha2-asm = { version = "0.6", optional = true }

[features]
default = []
asm = ["sha2-asm"]        # Enable assembly optimizations for SHA-256

[dev-dependencies]
criterion = "0.5"         # For benchmarking 10M hashes/sec goal
tokio-test = "0.4"

[[bench]]
name = "sha256_benchmark"
harness = false